--- a/templates/view_budget.html
+++ b/templates/view_budget.html
@@ -3,7 +3,12 @@
 {% block content %}
 <div class="card mb-4">
     <div class="card-header">
-        <h4 class="mb-0">{{ budget.name }}</h4>
+        <div class="d-flex justify-content-between align-items-center">
+            <h4 class="mb-0">{{ budget.name }}</h4>
+            <a href="{{ url_for('home') }}" class="btn btn-outline-primary">
+                <i class="bi bi-arrow-left"></i> Back to Budgets
+            </a>
+        </div>
     </div>
     <div class="card-body">
         <div class="row mb-4">
