--- a/templates/view_budget.html
+++ b/templates/view_budget.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="mb-3">
+    <a href="{{ url_for('home') }}" class="btn btn-secondary">
+        <i class="bi bi-arrow-left"></i> Back to Budgets
+    </a>
+</div>
+
 <div class="card mb-4">
     <div class="card-header">
         <div class="d-flex justify-content-between align-items-center">
